--- a/projects/list/ivy.xml
+++ b/projects/list/ivy.xml
@@ -32,4 +32,11 @@
         <dependency name="version" rev="latest.integration" conf="core->default"/>
         <dependency org="commons-cli" name="commons-cli" rev="1.0" conf="standalone->default"/>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </ivy-module>
